src/styles/App.css
* {
  box-sizing: border-box;
  color: black;
}

.App {
  float: none;
}

header {
  width: 100%;
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  margin-bottom: 2em;
}

header .image-container {
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
}

.logo {
  width: 10rem;
}

.team-icon {
  position: fixed;
  top: 5%;
  right: 10em;
  width: 4%;
}

.team-icon img {
  width: 100%;
}

@media screen and (max-width: 800px) {
  .logo {
    width: 20%;
  }
  .title {
    width: 60%;
  }

  .team-icon {
    width: 10%;
    left: 3%;
  }
}

@media screen and (max-width: 1200px) {
  .team-icon {
    width: 10%;
    left: 3%;
  }
}

